# RWSA

./: .gitignore  README 2.md  README.md  notebook_export.py  pyproject 2.toml  pyproject.toml  requirements.txt
classifier/: README.md  RELATORIO.md  evaluate_loso.py  predict_movements.py  train_final.py  train_loso.py
classifier/movement_clf/: __init__.py  dataio.py  dataset.py  engine.py  metrics.py  model.py
notebooks/: Editing_Staging_RSWA_BiMamba_v1.ipynb
parser/: __init__.py  annotations.py  channels.py  config.py  hypnogram.py  parallel.py  parser.py  preprocess.py
scripts/: evaluate.py  inspect_models.py  parser.py  predict.py  smoke_test.py  train_joint.py  train_rswa.py  train_staging.py
src/sleep_rswa/: __init__.py  config.py  constants.py  data.py  metrics.py
src/sleep_rswa/models/: __init__.py  common.py  factory.py  mamba.py  rswa.py  staging.py  staging_base.py  staging_cnn.py  staging_encoder.py  staging_lstm.py  system.py
src/sleep_rswa/preprocessing/: __init__.py  __main__.py  preprocess.py  rswa_labels.py
src/sleep_rswa/training/: __init__.py  cross_validation.py  distribution.py  engine.py  logger.py  losses.py  plots.py  prediction_logger.py  utils.py
src/sleep_rswa/utils/: __init__.py  summary.py
src/sleep_staging_rswa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_parser_annotations.py  test_shapes.py
