[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleep-staging-rswa"
version = "0.1.0"
description = "Sleep staging and RSWA detection in synchronized 3-second mini-epochs"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "python-dotenv>=1.0",
  "pandas>=2.0",
  "pyarrow>=16.0",
  "matplotlib>=3.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
mamba = ["mamba-ssm>=2.2"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]
